@@ -1,8 +1,8 @@
 
-R Under development (unstable) (2012-04-25 r59171) -- "Unsuffered Consequences"
+R Under development (unstable) (2012-06-25 r59637) -- "Unsuffered Consequences"
 Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
-Platform: x86_64-unknown-linux-gnu (64-bit)
+Platform: x86_64-apple-darwin11.4.0/x86_64 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -1522,6 +1522,8 @@ List of 2
 + }
 > pairs(USJudgeRatings, lower.panel=panel.smooth, upper.panel=panel.cor)
 > 
+> pairs(iris[-5], log = "xy") # plot all variables on log scale
+> 
 > 
 > 
 > graphics::par(get("par.postscript", pos = 'CheckExEnv'))
@@ -3012,7 +3014,7 @@ function (xy = 1, warn.log = TRUE)
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  5.635 0.109 5.816 0 0 
+Time elapsed:  4.823 0.213 5.052 0 0 
 > grDevices::dev.off()
 null device 
           1 
